k8s/API/hacka-api.deployament.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hacka-api
  labels:
    app: hacka-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hacka-api
  template:
    metadata:
      labels:
        app: hacka-api
    spec:
      containers:
        - name: hacka-api
          image: wolwer/hacka-app:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /up
              port: 9000
            initialDelaySeconds: 180
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /up
              port: 9000
            initialDelaySeconds: 180
            periodSeconds: 30
