k8s/API/php_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
      tier: backend
  template:
    metadata:
      labels:
        app: php
        tier: backend
    spec:
      enableServiceLinks: false
      containers:
        - name: php
          image: rigonlucas/hackaton-fpm:1.0.4-RC
          imagePullPolicy: Always
          volumeMounts:
            - name: code
              mountPath: /code
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "cp -r /var/www/html/. /code" ]
      volumes:
        - name: code
          persistentVolumeClaim:
            claimName: code
