k8s/API/lbms.yaml
apiVersion: v1
kind: Service
metadata:
  name: hacka-api-external
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: nginx
